fix video gap

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -168,8 +168,8 @@ background: url(../img/backdrop.png) no-repeat center center;
 #video {
 
   /*color: #f8f8f8;*/
-  padding-top: 100px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-  padding-bottom: 50px;
+  /*padding-top: 100px*/; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+  /*padding-bottom: 50px;*/
   position: absolute;
   top: 50%;
   left: 50%;
